tests/snapshots/sdk_conversion_snapshots__kimi__kimi_messages_ir_roundtrip.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: back
---
[
  {
    "role": "system",
    "content": "Be helpful."
  },
  {
    "role": "user",
    "content": "Hello!"
  },
  {
    "role": "assistant",
    "content": "Hi there!"
  }
]
