tests/snapshots/sdk_conversion_snapshots__kimi__kimi_simple_text_to_ir.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: ir
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "What is 2+2?"
        }
      ]
    }
  ]
}
