tests/snapshots/sdk_conversion_snapshots__kimi__kimi_usage_ir_roundtrip.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: usage
---
{
  "prompt_tokens": 100,
  "completion_tokens": 50,
  "total_tokens": 150
}
